progs/tests/faulty.sy
asdflökja;;;;
123
asd

// error: @_
